--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     build: .
     cap_add:
       - ALL
-    command: bitcoind -proxy=10.7.2.11:9050 -externalip=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -addnode=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion:12345 -addnode=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion:12345 -addnode=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion:12345      -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
+    command: bitcoind -debug=net  -debug=addrman -proxy=10.7.2.11:9050 -externalip=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion -listen -regtest -server -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
     networks:
       vpcbr:
         ipv4_address: 10.7.0.11
@@ -16,7 +16,7 @@ services:
     build: .
     cap_add:
       - ALL
-    command: bitcoind -proxy=10.7.2.11:9050 -externalip=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -addnode=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion:12345 -addnode=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion:12345 -addnode=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion:12345    -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
+    command: bitcoind -debug=net  -debug=addrman -proxy=10.7.2.11:9050 -externalip=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345  -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
     networks:
       vpcbr:
         ipv4_address: 10.7.0.12
@@ -25,7 +25,7 @@ services:
     build: .
     cap_add:
       - ALL
-    command: bitcoind -proxy=10.7.2.11:9050 -externalip=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -addnode=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion:12345 -addnode=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion:12345 -addnode=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion:12345     -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
+    command: bitcoind -debug=net   -debug=addrman -proxy=10.7.2.11:9050 -externalip=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
     networks:
       vpcbr:
         ipv4_address: 10.7.0.13
@@ -34,10 +34,19 @@ services:
     build: .
     cap_add:
       - ALL
-    command: bitcoind -proxy=10.7.2.11:9050 -externalip=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -addnode=servjuchjdb2dndkmi3bbacvh7bop4ansnal2nchi7ig6u3hzfqne7yd.onion:12345 -addnode=servivotqeinyvd7e5rhrbvykpkdmwksqw7huyzugimwvmvkutvwb6id.onion:12345 -addnode=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion:12345     -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
+    command: bitcoind -debug=net  -debug=addrman -proxy=10.7.2.11:9050 -externalip=serveaambewd4rco2cgognywfdgm5gx5rr6kegv6mpoelqcibeheqwad.onion  -listen -regtest -server -addnode=servivenwug4ekn4hmeutnamtmftrirsucmd3opek7kqql4dwliegjqd.onion:12345 -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
     networks:
       vpcbr:
         ipv4_address: 10.7.0.14
+  node5:
+    image: sonntuet1997/bitcoind:origin
+    build: .
+    cap_add:
+      - ALL
+    command: bitcoind -debug=net -debug=addrman -proxy=10.7.2.11:9050 -externalip=servl6ztg2ehmqoczm2qrxwnzthcd6pggfbwap5h6nklmz32qpz7tsqd.onion  -listen -regtest -server -addnode=servakcnd7wf234tm6dfdrzk2vbojbult4xg3nuaniutu3x7luchsgid.onion:12345 -rpcuser=rpc -rpcpassword=x -rpcport=10340  --datadir=/root/bitcoind-simnet/ -port=12345
+    networks:
+      vpcbr:
+        ipv4_address: 10.7.0.15
 
   tor-1:
     image: goldy/tor-hidden-service:0.3.5.8
@@ -53,6 +62,8 @@ services:
       SERVICE4_TOR_SERVICE_VERSION: '3'
       SERVICE5_TOR_SERVICE_HOSTS: 12345:10.8.0.10:12345
       SERVICE5_TOR_SERVICE_VERSION: '3'
+      SERVICE6_TOR_SERVICE_HOSTS: 12345:10.7.0.15:12345
+      SERVICE6_TOR_SERVICE_VERSION: '3'
       #      SERVICE1_TOR_SERVICE_KEY: |
       #        PT0gZWQyNTUxOXYxLXNlY3JldDogdHlwZTAgPT0AAACArobDQYyZAWXei4QZwr++
       #        j96H1X/gq14NwLRZ2O5DXuL0EzYKkdhZSILY85q+kfwZH8z4ceqe7u1F+0pQi/sM
@@ -61,6 +72,7 @@ services:
       SERVICE3_TOR_SERVICE_KEY: PT0gZWQyNTUxOXYxLXNlY3JldDogdHlwZTAgPT0AAAAw3f57w4U2MRT88/6EIMVjF/kawjtVjCmqRxPHOrl1RJWcGNZid7UpqeY3ZcesSryyiGBt1K9njUMKGFjckx3n
       SERVICE4_TOR_SERVICE_KEY: PT0gZWQyNTUxOXYxLXNlY3JldDogdHlwZTAgPT0AAABgFOQzQP2PUSkLkFCmAldGauyvp+5dz5I4/lY7yxTkc67d5++KeVCek7GypKF7cmvb3GNLs1878DC0X+2WT5Dv
       SERVICE5_TOR_SERVICE_KEY: PT0gZWQyNTUxOXYxLXNlY3JldDogdHlwZTAgPT0AAACoO5jlOW3mWYiTexlwrEaYrs+tRWREiF6hJq9WvoLwaD+1rJjJHULjPn5e0tPtaGkUHHPwATCCqg63t/Ae3SXt
+      SERVICE6_TOR_SERVICE_KEY: PT0gZWQyNTUxOXYxLXNlY3JldDogdHlwZTAgPT0AAABgE6cTCgl1Jie4YfxRAauPcmccAu2381b7j3SOF4IXbysCTZksRHAl5/CRtZB1+DD66ORfWZRBi8N3zkkjsl3t
     networks:
       vpcbr:
         ipv4_address: 10.7.1.11
